layout issues

--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -128,7 +128,7 @@ nav ul li a {
 
   .shehda__main-hero-text-wrapper p {
     font-size: 16px;
-    line-height: 54px;
+    line-height: 21px;
     letter-spacing: 10%;
   }
   .shehda__main-hero-text-wrapper a {
